Modify event system & Titles Module