@@ -17,10 +17,7 @@ import java.util.stream.Collectors;
 public class Util {
     public static Object loadNewClass(String classPath) {
         try {
-            return SigmaUtils.class.getClassLoader()
-                    .loadClass(classPath)
-                    .getDeclaredConstructor()
-                    .newInstance();
+            return SigmaUtils.class.getClassLoader().loadClass(classPath).getDeclaredConstructor().newInstance();
         } catch (ClassNotFoundException | IllegalAccessException | InstantiationException | InvocationTargetException |
                  NoSuchMethodException e) {
             e.printStackTrace();
@@ -30,8 +27,8 @@ public class Util {
     }
 
     public static String loadResourceString(String name) {
-        return new BufferedReader(new InputStreamReader(Objects.requireNonNull(SigmaUtils.class.getClassLoader()
-                .getResourceAsStream(name)))).lines()
+        return new BufferedReader(new InputStreamReader(
+                Objects.requireNonNull(SigmaUtils.class.getClassLoader().getResourceAsStream(name)))).lines()
                 .collect(Collectors.joining("\n"));
     }
 
@@ -46,18 +43,14 @@ public class Util {
     }
 
     public static String toSnakeCase(String s) {
-        return s.toLowerCase()
-                .replace(' ', '_');
+        return s.toLowerCase().replace(' ', '_');
     }
 
     public static void addDrawable(Screen screen, Drawable drawable) {
         ScreenAccessor sa = ((ScreenAccessor) screen);
-        sa.getDrawables()
-                .add(drawable);
-        sa.getChildren()
-                .add(drawable);
-        sa.getSelectables()
-                .add(drawable);
+        sa.getDrawables().add(drawable);
+        sa.getChildren().add(drawable);
+        sa.getSelectables().add(drawable);
     }
 
     public static String bestTime(long ms) {
@@ -69,12 +62,16 @@ public class Util {
                 new Pair<>("month", 12),
                 new Pair<>("year", 0)
         };
+        return bestTime(ms, units, false, 0);
+    }
 
+    public static String bestTime(long ms, Pair<String, Integer>[] units, boolean small, int precision) {
         float seconds = ms / 1000f;
         for (Pair<String, Integer> unit : units) {
             if (unit.getRight() == 0 || seconds < unit.getRight()) {
-                int intSeconds = Math.round(seconds);
-                return String.format("%s %s%s", intSeconds, unit.getLeft(), intSeconds > 1 ? "s" : "");
+                float intSeconds = precision == 0 ? Math.round(seconds) : seconds;
+                return String.format("%." + precision + "f%s%s%s", intSeconds, small ? "" : " ", unit.getLeft(),
+                        (intSeconds > 1 && !small) ? "s" : "");
             }
 
             seconds /= unit.getRight();
